# autonomy_stack_diablo_setup

./: README.md  system_bagfile.sh  system_bagfile_with_exploration_planner.sh  system_bagfile_with_route_planner.sh  system_real_robot.sh  system_real_robot_with_exploration_planner.sh  system_real_robot_with_route_planner.sh  system_simulation.sh  system_simulation_with_exploration_planner.sh  system_simulation_with_route_planner.sh
base_station/: base_station.rviz  base_station.sh
sensor_brackets/: diablo_replacement_top_board_3mm_thick.DXF  diablo_replacement_top_board_3mm_thick.SLDPRT  diablo_replacement_top_board_3mm_thick.STEP  diablo_replacement_top_board_3mm_thick.STL  mid360_lidar_bracket_3mm_thick.DXF  mid360_lidar_bracket_3mm_thick.SLDPRT  mid360_lidar_bracket_3mm_thick.STEP  mid360_lidar_bracket_3mm_thick.STL  side_panel_4mm_thick.DXF  side_panel_4mm_thick.SLDPRT  side_panel_4mm_thick.STEP  side_panel_4mm_thick.STL  theta_z1_camera_bracket_3mm_thick.DXF  theta_z1_camera_bracket_3mm_thick.SLDPRT  theta_z1_camera_bracket_3mm_thick.STEP  theta_z1_camera_bracket_3mm_thick.STL  top_cover_3mm_thick.DXF  top_cover_3mm_thick.SLDPRT  top_cover_3mm_thick.STEP  top_cover_3mm_thick.STL
src/base_autonomy/local_planner/: CMakeLists.txt  package.xml
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/base_autonomy/sensor_scan_generation/src/: sensorScanGeneration.cpp
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: terrainAnalysis.cpp
src/base_autonomy/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
src/base_autonomy/vehicle_simulator/: CMakeLists.txt  package.xml
src/base_autonomy/vehicle_simulator/launch/: system_bagfile.launch  system_bagfile_with_exploration_planner.launch  system_bagfile_with_route_planner.launch  system_real_robot.launch  system_real_robot_with_exploration_planner.launch  system_real_robot_with_route_planner.launch  system_simulation.launch  system_simulation_with_exploration_planner.launch  system_simulation_with_route_planner.launch  vehicle_simulator.launch
src/base_autonomy/vehicle_simulator/log/: readme.txt
src/exploration_planner/tare_planner/: CMakeLists.txt
src/route_planner/far_planner/: package.xml
src/route_planner/far_planner/rviz/: default.rviz
src/slam/arise_slam_mid360/: .gitignore  CMakeLists.txt  debug_mapping.xml  package.xml  ros2.rviz  start_pose.txt
src/slam/arise_slam_mid360/config/: livox_mid360.yaml
src/slam/arise_slam_mid360/config/livox/: livox_mid360_calibration.yaml
src/slam/arise_slam_mid360/include/: utility.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/: LocalMap.h  common.h  debug_view.h  logging.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/FeatureExtraction/: DepthImageKeypointExtractor.h  LidarKeypointExtractor.h  featureExtraction.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/ImuPreintegration/: imuPreintegration.h  imuPreintegration_good.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/LaserMapping/: SE3AbsolutatePoseFactor.h  laserMapping.h  lidarOptimization.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/LidarProcess/: LidarSlam.h  LocalMap.h  MotionModel.h  PointCloudStorage.h  RollingGrid.h  Utilities.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/LidarProcess/factor/: EulerMahaDisCeresCostFunctions.h  SE3AbsolutatePoseFactor.h  ceresCostFunction.h  lidarOptimization.h  local_parameterization_se3.hpp  pose_local_parameterization.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/ScanRegistration/: scanRegistration.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/config/: parameter.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/container/: MapRingBuffer.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/flann/: nanoflann.h  octree.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/sensor_data/imu/: imu_data.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/sensor_data/pointcloud/: LidarPoint.h  point_os.h
src/slam/arise_slam_mid360/include/arise_slam_mid360/utils/: Twist.h  Utilities.h
src/slam/arise_slam_mid360/launch/: arize_slam.launch.py
src/slam/arise_slam_mid360/src/: debug_view.cpp  featureExtraction_node.cpp  imuPreintegration_node.cpp  laserMapping_node.cpp  ousterTransform.cpp  scanRegistration_node.cpp
src/slam/arise_slam_mid360/src/FeatureExtraction/: DepthImageKeypointExtractor.cpp  LidarKeypointExtractor.cpp  featureExtraction.cpp  velodyne_point_cloud_times.txt
src/slam/arise_slam_mid360/src/ImuPreintegration/: imuPreintegration.cpp
src/slam/arise_slam_mid360/src/LaserMapping/: LocalMap.cpp  laserMapping.cpp  lidarOptimization.cpp
src/slam/arise_slam_mid360/src/LidarProcess/: LidarSlam.cpp  RollingGrid.cpp  SE3AbsolutatePoseFactor.cpp  pose_local_parameterization.cpp
src/slam/arise_slam_mid360/src/parameter/: parameter.cpp
src/slam/arise_slam_mid360_msgs/: CMakeLists.txt  package.xml
src/slam/arise_slam_mid360_msgs/msg/: IterationStats.msg  LaserFeature.msg  OptimizationStats.msg
src/utilities/diablo_ros2/diablo_interaction/diablo_teleop_joy/: CMakeLists.txt  package.xml
src/utilities/diablo_ros2/diablo_interaction/diablo_teleop_joy/launch/: diablo_teleop_joy.launch
src/utilities/diablo_ros2/diablo_interaction/diablo_teleop_joy/src/: diabloTeleopJoy.cpp
src/utilities/domain_bridge/: CMakeLists.txt
src/utilities/livox_ros_driver2/: CMakeLists.txt
src/utilities/receive_theta/: CMakeLists.txt  package.xml  readme.txt
src/utilities/receive_theta/dependency/gstthetauvc/thetauvc/: Makefile  gstthetauvc.c  gstthetauvcsrc.c  gstthetauvcsrc.h  thetauvc.c  thetauvc.h
src/utilities/receive_theta/dependency/libuvc-theta/: README.md
src/utilities/receive_theta/dependency/libuvc-theta/include/libuvc/: libuvc.h
src/utilities/receive_theta/dependency/libuvc-theta/src/: device.c  diag.c
src/utilities/receive_theta/launch/: receive_theta.launch
src/utilities/receive_theta/src/: receiveTheta.cpp
(+248 files in other folders)
